# desafio-ankatech-projeto

./: .env.example  README.md  clean.sh  docker-compose.yml  setup.sh
backend/: Dockerfile  README.md  api.py  auth.py  crud.py  database.py  main.py  models.py  pricing.py  pyproject.toml  requirements.txt  run_tests.py  schemas.py  simple_test.py  start_backend.py  tasks.py  test_coverage.py  test_runner.py  websocket.py
backend/UNKNOWN.egg-info/: SOURCES.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_init.py
backend/invest_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_assets_alloc.py  test_auth.py  test_clients.py  test_export.py  test_performance.py  test_variation.py
frontend/: Dockerfile  README.md  middleware.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/api/export/: route.ts
frontend/app/clients/: page.tsx
frontend/app/comissoes/: page.tsx
frontend/app/custodia/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/net-new-money/: page.tsx
frontend/app/receitas/: page.tsx
frontend/components/: GlobalSearch.tsx  LivePrice.tsx  PerformanceChart.tsx  Providers.tsx  Sidebar.tsx  ThemeToggle.tsx  UserMenu.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  modal.tsx  spinner.tsx  stat-card.tsx  switch.tsx  table.tsx  toaster.tsx
frontend/hooks/: useLivePrices.ts
frontend/lib/: api.ts  format.ts  types.ts  ws.ts
(+4 files in other folders)
